[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/escoria-core/ui_library/menus/main_menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://addons/escoria-core/design/escoria-logo-small.png" type="Texture" id=3]
[ext_resource path="res://addons/escoria-core/ui_library/menus/options/options.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/escoria-core/ui_library/menus/load_save/load/load_game.tscn" type="PackedScene" id=5]

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="main" type="VBoxContainer" parent="Panel/CenterContainer"]
margin_left = 332.0
margin_top = 162.0
margin_right = 948.0
margin_bottom = 738.0
custom_constants/separation = 100

[node name="TextureRect" type="TextureRect" parent="Panel/CenterContainer/main"]
margin_right = 616.0
margin_bottom = 236.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="VBoxContainer" parent="Panel/CenterContainer/main"]
margin_top = 336.0
margin_right = 616.0
margin_bottom = 576.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_game" type="Button" parent="Panel/CenterContainer/main/buttons"]
margin_right = 616.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
size_flags_vertical = 3
text = "NEW_GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load_game" type="Button" parent="Panel/CenterContainer/main/buttons"]
margin_top = 160.0
margin_right = 616.0
margin_bottom = 180.0
text = "LOAD_GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="Button" parent="Panel/CenterContainer/main/buttons"]
margin_top = 190.0
margin_right = 616.0
margin_bottom = 210.0
text = "OPTIONS"

[node name="quit" type="Button" parent="Panel/CenterContainer/main/buttons"]
margin_top = 220.0
margin_right = 616.0
margin_bottom = 240.0
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" parent="Panel" instance=ExtResource( 4 )]
visible = false

[node name="load_game" parent="Panel" instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="Panel/CenterContainer/main/buttons/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/main/buttons/load_game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/main/buttons/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/main/buttons/quit" to="." method="_on_quit_pressed"]
[connection signal="back_button_pressed" from="Panel/options" to="." method="_on_options_back_button_pressed"]
[connection signal="back_button_pressed" from="Panel/load_game" to="." method="_on_load_game_back_button_pressed"]
